add resend email register
